fix sidebar nav outline not overflow and edit some colors for better contrast

--- a/src/globals.css
+++ b/src/globals.css
@@ -7,16 +7,16 @@
     --primary: 240 8% 10%;
     --primary-foreground: 0 0% 98%;
 
-    --foreground: 240 8% 5%;
-    --foreground-muted: 240 8% 55%;
-
     --background: 240 28% 97%;
-    --background-card: 240 10% 98%;
+    --background-card: 240 10% 98.5%;
     --background-input: 240 10% 100%;
     --background-popover: 240 10% 99%;
 
+    --foreground: 240 8% 5%;
+    --foreground-muted: 240 8% 55%;
+
     --accent: 240, 50%, 40%, 0.04;
-    --border: 240 8% 94%;
+    --border: 240 8% 92%;
     --scrollbar: 240 8% 85%;
 
     --radius: 4px;
@@ -26,16 +26,16 @@
     --primary: 0 0% 95%;
     --primary-foreground: 0 0% 8%;
 
+    --background: 240 6% 7%;
+    --background-card: 240 6% 11%;
+    --background-input: 240 6% 13%;
+    --background-popover: 240 6% 11%;
+
     --foreground: 240 6% 98%;
     --foreground-muted: 240 6% 55%;
 
-    --background: 240 6% 7%;
-    --background-card: 240 6% 9%;
-    --background-input: 240 6% 12%;
-    --background-popover: 240 6% 11%;
-
     --accent: 240, 16%, 80%, 0.085;
-    --border: 240 6% 15%;
+    --border: 240 6% 17%;
     --scrollbar: 240 6% 20%;
   }
 }
@@ -58,7 +58,7 @@
   }
 
   .shadow {
-    @apply shadow-[0_2px_8px_#31315010] dark:shadow-[0_2px_10px_#0c0c0d70];
+    @apply shadow-[0_2px_4px_#31315010] dark:shadow-[0_2px_4px_#0c0c0d90];
   }
   .shadow-xl {
     @apply shadow-[0_3px_24px_#31315010] dark:shadow-[0_4px_30px_#0c0c0d20];
